# figure-counter

./: CMakeLists.txt  Readme.md  main.cpp
figure-counter/: context.cpp  context.h  matrix.cpp  matrix.h  strategy.cpp  strategy.h  strategy_bfs.cpp  strategy_mock.cpp  strategy_scan.cpp  strategy_scan.h  strategy_traverse.cpp  strategy_traverse.h  visited_repo.cpp  visited_repo.h
figure-counter/strategies/: grid_traverse.cpp  grid_traverse.h  strategy_scan.cpp  strategy_scan.h
figure-counter/traverse/: element_gueue.cpp  element_queue.h  strategy_traverse.cpp  strategy_traverse.h
figure-counter/utils/: matrix.cpp  matrix.h  visited_repo.cpp  visited_repo.h
test/: CMakeLists.txt  bfs_strategy.cpp  different_matrix_types.cpp  example_test.cpp  input_data.cpp  input_data.h  large_rand_matrix.cpp  medium_rand_matrix.cpp  mock_strategy.cpp  rand_matrix.cpp  small_rand_matrix.cpp
